Update from hasPlayer to CsWebplayer 1.1.6

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -40,7 +40,7 @@
         <!-- endsources -->
 
         <!-- uses cswebplayer-->
-        <script src="../hasplayer.min.js"></script>
+        <script src="../cswebplayer.min.js"></script>
 
 		<!-- index.html handlers-->
         <script src="js/adsPluginEvtsHdler.js"></script>
