--- a/samples/voAdsPlayer/index.html
+++ b/samples/voAdsPlayer/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/tables.css" />
 
-<script type="text/javascript" src="../hasplayer.min.js"></script>
+<script type="text/javascript" src="../cswebplayer.min.js"></script>
 
 <!-- sources modify by gulp.replaceSourcesByBuild -->
 <!-- !!! DO NOT REMOVE OR CHANGE THE COMMENTS LINE ABOVE !!! -->
