--- a/samples/voAdsPlayer/index.html
+++ b/samples/voAdsPlayer/index.html
@@ -34,10 +34,10 @@
             <h1 class="clsLogo" onclick="fScrollTo('top')"><img src="images/logo_vo.png" alt="Viaccess.Orca" width="123px" height="67px"/></h1>
             <div class="clsMenu">
                 <ul>
-                    <li id="cswebplayer_version" class="active">hasPlayer</li>
+                    <li id="cswebplayer_version" class="active"></li>
                 </ul>
                 <ul>
-                    <li id="adsplayer_version" class="active">CSAdsPlugin</li>
+                    <li id="adsplayer_version" class="active"></li>
                 </ul>
             </div>
         </div>
