Manage "skippable" & "skip" events

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -225,6 +225,15 @@
                     <div class="event_title">pause</div>
                     <input id="event_pause" eventId="pause" type="number" value="0" disabled> </input>
                 </div>
+                <div class="event">
+                    <div class="event_title">skippable</div>
+                    <input id="event_skippable" eventId="skippable" type="number" value="0" disabled> </input>
+                </div>
+
+                <div class="event">
+                    <div class="event_title">skip</div>
+                    <input id="event_skip" eventId="skip" type="number" value="0" disabled> </input>
+                </div>
             </div>
             <button id="clearEvents_button" >Clear all</button><br>
 
