Add first skip tests

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -59,7 +59,7 @@
         <div>
             <br>
             <input id="stream_toplay" type="text" size="100" value="http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest"> </input><br>
-            <input id="ad_toplay" type="text" size="100" value="../ads/xml/mast/preroll-vast30-skippable.xml"> </input><br>
+            <input id="ad_toplay" type="text" size="100" value="../ads/xml/mast/preroll-vast30-skippable-percent.xml"> </input><br>
             <br>
             <button id="play_button">Play</button>
             <button id="pause_button">Pause</button>
@@ -206,7 +206,7 @@
                     <input id="event_start" eventId="start" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
-                    <div class="event_title">stop</div>
+                    <div class="event_title">end</div>
                     <input id="event_end" eventId="end" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
