--- a/samples/voAdsPlayer/index.html
+++ b/samples/voAdsPlayer/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>CSWebPlayer</title>
+<title>VoAdsPlayer</title>
 <link
     href="http://www.viaccess-orca.com/templates/ja_onepage/favicon.ico"
     rel="shortcut icon" type="image/vnd.microsoft.icon">
