fix xml filename

--- a/samples/voAdsPlayer/index.html
+++ b/samples/voAdsPlayer/index.html
@@ -57,7 +57,7 @@
         </tr>
         <tr>
             <td><label>Stream url</label></td>
-            <td><input type="text" id="stream" name="stream" size="100" value="http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest"></input>
+            <td><input type="text" id="stream" name="stream" size="100" value=""></input>
             </td>
         </tr>
         <tr>
@@ -66,7 +66,7 @@
         </tr>
         <tr>
             <td><label>Ad url</label></td>
-            <td><input type="text" id="ad_url" name="ad_url" size="100" value="../../samples/ads/xml/vmap/preroll-nonLinear.xml" disabled="disabled"></input>
+            <td><input type="text" id="ad_url" name="ad_url" size="100" value="" disabled="disabled"></input>
             </td>
         </tr>
     </table>
