Update version automatically in index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <h1>CSAdsPlugin.js</h1>
-<!--<h3>Release: @@VERSION</h3>-->
-<h3>Release: 1.1.1</h3>
+<h3>Release: @@VERSION</h3>
+
 <p>Contents:</p>
 <ul>
     <li><a href="csadsplugin.zip">Archive</a></li>
