--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -59,7 +59,7 @@
 
         <div>
             <br>
-            <input id="stream_toplay" type="text" size="100" value="http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest"> </input><br>
+            <input id="stream_toplay" type="text" size="100" value="https://d1stu24dk3kqej.cloudfront.net/Clear/BBB_MSS_Clear/index.ism/Manifest"> </input><br>
             <input id="ad_toplay" type="text" size="100" value="../ads/xml/vmap/preroll-repeat.xml"> </input><br>
             <br>
             <button id="play_button">Play</button>
