remove unused stuff in testPlayer

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -204,36 +204,35 @@
             <div id="csadsplugin_events" class="events_list">
                 <div class="event">
                     <div class="event_title">start</div>
-                    <input id="event_start" eventId="start" type="number" value="0" disabled> </input>
+                    <input id="event_start" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">stop</div>
-                    <input id="event_end" eventId="end" type="number" value="0" disabled> </input>
+                    <input id="event_end" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">add</div>
-                    <input id="event_add" eventId="add" type="number" value="0" disabled> </input>
+                    <input id="event_add" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">remove</div>
-                    <input id="event_remove" eventId="remove" type="number" value="0" disabled> </input>
+                    <input id="event_remove" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">play</div>
-                    <input id="event_play" eventId="play" type="number" value="0" disabled> </input>
+                    <input id="event_play" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">pause</div>
-                    <input id="event_pause" eventId="pause" type="number" value="0" disabled> </input>
+                    <input id="event_pause" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">skippable</div>
-                    <input id="event_skippable" eventId="skippable" type="number" value="0" disabled> </input>
+                    <input id="event_skippable" type="number" value="0" disabled> </input>
                 </div>
-
                 <div class="event">
                     <div class="event_title">skip</div>
-                    <input id="event_skip" eventId="skip" type="number" value="0" disabled> </input>
+                    <input id="event_skip" type="number" value="0" disabled> </input>
                 </div>
             </div>
             <button id="clearEvents_button" >Clear all</button><br>
@@ -243,79 +242,79 @@
             <div id="tracking_events" class="events_list">
                 <div class="event">
                     <div class="event_title">creativeView</div>
-                    <input id="te_creativeView" eventId="creativeView" type="number" value="0" disabled> </input>
+                    <input id="te_creativeView" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">start</div>
-                    <input id="te_start" eventId="start" type="number" value="0" disabled> </input>
+                    <input id="te_start" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">firstQuartile</div>
-                    <input id="te_firstQuartile" eventId="firstQuartile" type="number" value="0" disabled> </input>
+                    <input id="te_firstQuartile" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">midpoint</div>
-                    <input id="te_midpoint" eventId="midpoint" type="number" value="0" disabled> </input>
+                    <input id="te_midpoint" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">thirdQuartile</div>
-                    <input id="te_thirdQuartile" eventId="thirdQuartile" type="number" value="0" disabled> </input>
+                    <input id="te_thirdQuartile" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">complete</div>
-                    <input id="te_complete" eventId="complete" type="number" value="0" disabled> </input>
+                    <input id="te_complete" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">mute</div>
-                    <input id="te_mute" eventId="mute" type="number" value="0" disabled> </input>
+                    <input id="te_mute" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">unmute</div>
-                    <input id="te_unmute" eventId="unmute" type="number" value="0" disabled> </input>
+                    <input id="te_unmute" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">pause</div>
-                    <input id="te_pause" eventId="pause" type="number" value="0" disabled> </input>
+                    <input id="te_pause" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">rewind</div>
-                    <input id="te_rewind" eventId="rewind" type="number" value="0" disabled> </input>
+                    <input id="te_rewind" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">resume</div>
-                    <input id="te_resume" eventId="resume" type="number" value="0" disabled> </input>
+                    <input id="te_resume" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">fullscreen</div>
-                    <input id="te_fullscreen" eventId="fullscreen" type="number" value="0" disabled> </input>
+                    <input id="te_fullscreen" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">exitFullscreen</div>
-                    <input id="te_exitFullscreen" eventId="exitFullscreen" type="number" value="0" disabled> </input>
+                    <input id="te_exitFullscreen" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">expand</div>
-                    <input id="te_expand" eventId="expand" type="number" value="0" disabled> </input>
+                    <input id="te_expand" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">collapse</div>
-                    <input id="te_collapse" eventId="collapse" type="number" value="0" disabled> </input>
+                    <input id="te_collapse" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">acceptInvitationLinear</div>
-                    <input id="te_acceptInvitationLinear" eventId="acceptInvitationLinear" type="number" value="0" disabled> </input>
+                    <input id="te_acceptInvitationLinear" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">closeLinear</div>
-                    <input id="te_closeLinear" eventId="closeLinear" type="number" value="0" disabled> </input>
+                    <input id="te_closeLinear" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">skip</div>
-                    <input id="te_skip" eventId="skip" type="number" value="0" disabled> </input>
+                    <input id="te_skip" type="number" value="0" disabled> </input>
                 </div>
                 <div class="event">
                     <div class="event_title">progress</div>
-                    <input id="te_progress" eventId="progress" type="number" value="0" disabled> </input>
+                    <input id="te_progress" type="number" value="0" disabled> </input>
                 </div>
             </div>
             <button id="clear_te_button" >Clear all</button>
