Check the remaining time in skippable event

--- a/samples/testsPlayer/index.html
+++ b/samples/testsPlayer/index.html
@@ -190,7 +190,7 @@
 
             <div class="section_info">
                 <div class="section_info_line">
-                    <label class="section_info_label">ID: </label>
+                    <label class="section_info_label">Id: </label>
                     <label class="section_info_value" id="ad_dom_id">-</label>
                 </div>
                 <div class="section_info_line">
@@ -201,7 +201,10 @@
                     <label class="section_info_label">Click url: </label>
                     <label class="section_info_value" id="ad_dom_clickuri" >-</label>
                 </div>
-
+                <div class="section_info_line">
+                    <label class="section_info_label">Remaining time: </label>
+                    <label class="section_info_value" id="ad_dom_remainingtime" >-</label>
+                </div>
             </div>
 
             <div id="csadsplugin_events" class="events_list">
